--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -73,7 +73,7 @@
   <div class="navbar">
     <h1>החשבון שלי</h1>
     <div class="nav-links">
-      <a href="{% url 'admin_dashboard' %}">← חזרה לדשבורד</a>
+      <a href="{% url 'admin_dashboard' %}"> חזרה לדשבורד</a>
     </div>
   </div>
 
